--- a/Laby2/Lab2.html
+++ b/Laby2/Lab2.html
@@ -9,17 +9,24 @@
 </head>
 
 <body>
-    <div id="slider">
-        <div class="slides">
-        	<img src="https://i.picsum.photos/id/1011/5472/3648.jpg?hmac=Koo9845x2akkVzVFX3xxAc9BCkeGYA9VRVfLE4f0Zzk" alt="">
-        	<img src="https://i.picsum.photos/id/1015/6000/4000.jpg?hmac=aHjb0fRa1t14DTIEBcoC12c5rAXOSwnVlaA5ujxPQ0I" alt="">
-        	<img src="https://i.picsum.photos/id/10/2500/1667.jpg?hmac=J04WWC_ebchx3WwzbM-Z4_KC_LeLBWr5LZMaAkWkF68" alt="">
-        	<img src="https://i.picsum.photos/id/1004/5616/3744.jpg?hmac=Or7EJnz-ky5bsKa9_frdDcDCR9VhCP8kMnbZV6-WOrY" alt="">
-        </div>
-    </div>
-    <main>
+    <main class="slider">
+        <section class="slider_container">
+            <button class="button-prev" data-prev>prev</button>
+            <figure class="slides" data-slide></figure>
+            <button class="button-next" data-next>next</button>
+        </section>
     </main>
     <script src="main.js"></script>
+    <script> 
+        const imagesArray = [
+            'https://i.picsum.photos/id/1011/5472/3648.jpg?hmac=Koo9845x2akkVzVFX3xxAc9BCkeGYA9VRVfLE4f0Zzk',
+            'https://i.picsum.photos/id/1015/6000/4000.jpg?hmac=aHjb0fRa1t14DTIEBcoC12c5rAXOSwnVlaA5ujxPQ0I',
+            'https://i.picsum.photos/id/10/2500/1667.jpg?hmac=J04WWC_ebchx3WwzbM-Z4_KC_LeLBWr5LZMaAkWkF68',
+            'https://i.picsum.photos/id/1004/5616/3744.jpg?hmac=Or7EJnz-ky5bsKa9_frdDcDCR9VhCP8kMnbZV6-WOrY'
+        ];
+        const slider = new Slider(imagesArray);
+        slider.initialize();
+    </script>
 </body>
 
 </html>
