positioned slider elements on website

--- a/Laby2/Lab2.html
+++ b/Laby2/Lab2.html
@@ -11,9 +11,10 @@
 <body>
     <main class="slider">
         <section class="slider_container">
-            <button class="button-prev" data-prev>prev</button>
+            <button class="button-prev" id="slider_button" data-prev><</button>
             <figure class="slides" data-slide></figure>
-            <button class="button-next" data-next>next</button>
+            <button class="button-next" id="slider_button" data-next>></button>
+
         </section>
     </main>
     <script src="main.js"></script>
